@@ -1,0 +1,34 @@
+﻿## Title: Lib: AboutPanel
+## X-Curse-Packaged-Version: v1.41
+## X-Curse-Project-Name: LibAboutPanel
+## X-Curse-Project-ID: libaboutpanel
+## X-Curse-Repository-ID: wow/libaboutpanel/mainline
+
+## Notes: Adds an about panel to interface options.
+
+## Author: Ackis
+## eMail: ackis AT shaw DOT ca
+##X-Author-Faction = Horde
+##X-Author-Server = Thunderlord US
+## X-Donate: http://www.curseforge.com/projects/libaboutpanel/#w_donations
+
+## Interface: 30100
+## Version: 1.41
+## X-Revision: @project-revision@
+## X-Date: 2009-05-27T11:18:33Z
+
+## X-Category: Libraries
+## X-Localizations: enUS
+## X-Website: http://www.wowwiki.com/LibAboutPanel
+## X-Feedback: http://wow.curse.com/downloads/wow-addons/details/libaboutpanel.aspx
+
+## Dependencies:
+## X-Embeds: LibStub, CallbackHandler-1.0
+## OptionalDeps: LibStub, CallbackHandler-1.0
+## DefaultState: Enabled
+## LoadOnDemand: 0
+
+libs\LibStub\LibStub.lua
+libs\CallbackHandler-1.0\CallbackHandler-1.0.xml
+
+LibAboutPanel.lua
